# oauth2_provider_rs

./: Cargo.toml  README.md  docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile  README.md
backend/migrations/: 20221017112116_users.sql  20221017113315_oauth_clients.sql  20221017114602_authorize_codes.sql  20221019150644_change_password_to_users.sql
backend/src/: db.rs  main.rs
backend/src/entity/: user.rs
backend/src/handler/: error.rs  home.rs  login.rs  mod.rs  signup.rs  top.rs  utils.rs
backend/src/repository/: user.rs
backend/src/service/: login.rs  signup.rs
backend/templates/: index.html  login.html  signup.html
db/initdb.d/: init_db.sql
migrations/: 20221017112116_users.sql  20221017113315_oauth_clients.sql  20221017113654_access_tokens.sql  20221017114239_refresh_tokens.sql  20221017114602_authorize_codes.sql  20221019151010_change_password_to_users.sql  20221019151102_change_password_to_users.sql  20221024115917_add_column_to_oauth_clients.sql  20221024125619_add_column_to_oauth_clients.sql  20221026104120_rename_authorize_codes.sql
nginx/: Dockerfile  nginx.conf
src/: db.rs  main.rs
src/entity/: access_token.rs  authorization_code.rs  authorize_code.rs  mod.rs  oauth_client.rs  refresh_token.rs
src/handler/: authorization.rs  error.rs  home.rs  login.rs  mod.rs  oauth_client.rs  resource.rs  signup.rs  token.rs  top.rs
src/middleware/: auth.rs  mod.rs  token_verifier.rs
src/models/: access_token.rs  authorization_code.rs  mod.rs  oauth_client.rs  refresh_token.rs
src/repository/: access_token.rs  authorization_code.rs  authorize_code.rs  mod.rs  oauth_client.rs  user.rs
src/utils/: gen_random_string.rs  hash_password.rs  mod.rs
templates/: index.html  signup.html
templates/error/: 4xx.html  5xx.html
templates/oauth_client/: index.html  new.html  show.html
templates/user/: show.html
