[package]
name = "oauth2_provider_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-identity = "0.5.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4.2.1"
anyhow = "1.0.65"
askama = "0.11.1"
async-trait = "0.1.58"
base64 = "0.13.1"
chrono = { version = "0.4.22", features = ["serde"]}
dotenv = "0.15.0"
env_logger = "0.9.1"
futures-util = { version = "0.3.25", default-features = false, features = ["std"] }
rand = "0.8.5"
rust-argon2 = "1.0.0"
serde = { version = "^1.0.145", features = ["derive"] }
serde_json = "1.0.86"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "mysql" ] }
url = "2.3.1"
uuid = { version="1.2.1", features = ["v4"] }
